Fix alignment in most browsers.

--- a/less/_settings.less
+++ b/less/_settings.less
@@ -1,4 +1,4 @@
-@layout-width:          768px;
+@layout-width:          772px;
 
 @header-background:     #0099FF;
 @header-color-main:     #EBEBE7;
